[gd_scene load_steps=2 format=3 uid="uid://kutnrsk7ammh"]

[ext_resource type="Script" path="res://Script/start_screen.gd" id="1_clbim"]

[node name="Start_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_clbim")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -1.0
offset_right = 299.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Settings_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start_button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings_button" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit_button" to="." method="_on_quit_button_pressed"]
